--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -51,6 +51,19 @@ ul {
 
 #root {
   height: 100%;
+
+  section {
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.25);
+
+    &:nth-of-type(even) {
+      background: #f5f7f9;
+      z-index: 50;
+    }
+
+    &:first-of-type {
+      box-shadow: none;
+    }
+  }
 }
 
 #hs-eu-cookie-confirmation {
