--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -174,6 +174,7 @@ ul {
   float: right;
   margin-right: -30px;
   margin-top: 20px;
+  margin-bottom: 400px;
   width: 200px;
 }
 
@@ -193,7 +194,7 @@ ul {
     }
 
     position: sticky;
-    top: 360px;
+    top: 380px;
     right: 0;
     float: right;
     margin-right: -250px;
